# sidecar

./: .gitignore  README.md
go-server/: README.md  go-server  go-server.go  go.mod
node-server/: Dockerfile  app.js  package-lock.json  package.json
rust-server/: Cargo.toml  Dockerfile  build.rs
rust-server/src/: items.proto  main.rs  models.rs
