[package]
name = "rust-server"
version = "0.1.0"
authors = ["Jason Younker <jason@ynkr.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
bytes = "0.5.4"

[build-dependencies]
prost-build = { version = "0.6" }
